--- a/views/index.jade
+++ b/views/index.jade
@@ -1,1 +1,4 @@
-extends layout,,block content,  h1= title,  p Welcome to #{title}
+extends layout
+block content
+    h1= title
+    p Welcome to #{title}
