Cambios varios, integración con jquery

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,4 +4,9 @@ head
     link(rel='stylesheet', href='/stylesheets/style.css')
         
 body
-    block content
+    #container
+        #header
+            h1= title
+        block content
+        #footer
+            a(href="http://www.quantium.com.mx") Quantium
