--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,19 @@
 extends layout
 block content
-    h1= "Toma chango tu Banana"
-    p Welcome to #{title}
+    
+    script(src='http://code.jquery.com/jquery-1.9.1.min.js')
+    script(src='/js/view.index.js')
+    
+    #left-column.column
+        h2 Elige tu héroe
+        ul#heroes
+          each hero in heroes
+            li(class='hero-name')
+              a(href='#') #{hero}
+
+    #right-column.column
+        h2 Facts
+        ul#facts
+        //- label(for="new-fact") Añadir nuevo fact:
+            textarea#new-fact
+            a(id='add-new-fact', href='#') Añadir
