--- a/views/index.jade
+++ b/views/index.jade
@@ -14,6 +14,6 @@ block content
     #right-column.column
         h2 Facts
         ul#facts
-        //- label(for="new-fact") Añadir nuevo fact:
-            textarea#new-fact
-            a(id='add-new-fact', href='#') Añadir
+        label(for="new-fact") Añadir nuevo fact:
+        textarea#new-fact
+        a(id='add-new-fact', href='#') Añadir
